added BaseClass and refactored Interactions according to base class