@@ -23,8 +23,7 @@
                     <fork>true</fork>
                     <source>23</source>   <!-- Replace with your actual JDK version -->
                     <target>23</target>
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
+                    <compilerArgs>--enable-preview
                         <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
